made some css changes

--- a/Seapal_html/site/stylesheet.css
+++ b/Seapal_html/site/stylesheet.css
@@ -6,10 +6,34 @@
 body {
 	margin: 1em;
 	padding: 0px;
-	background: #878787;
+	background: #fffed3;
 	font-family: myWoffFont, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 13px;
-	color: #2E2E2E;
+	color: #accb00;
+}
+
+a {
+	text-decoration:none;
+	color: #5fae13;
+}
+
+a:visited {
+	color: #007e1a;
+}
+
+.navbar {
+	background: white;
+	border-style: double;
+	padding: 10px;
+	padding-bottom: 3em;
+}
+
+li {
+    list-style: none;
+    float: left;
+    width: 8.6em;
+    position: relative;
+    margin: 0.4em; padding: 0;
 }
 
 h1, h2, h3, h4 {
@@ -17,7 +41,6 @@ h1, h2, h3, h4 {
 	padding: 0;
 	text-transform: uppercase;
 	font-weight: 300;
-	color: #2E2E2E;
 }
 
 h1 {
