weather overlays added to map
styling stuff still has to be done ;-)

--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -64,6 +64,32 @@
 		        </div>
 		    </div>
 		    
+		    <div id="weatherModeContainer">
+		        <div id="weatherMode_choices" class="well">
+			        Weather Mode:
+				    <div id="radio_form">
+				        <input type="radio" name="map_mode" id="sailor_mode" value="sailor_mode">
+				        <label for = "sailor_mode">Sailor</label>
+				        <input type="radio" name="map_mode" id="tourist_mode" value="tourist_mode">
+				        <label for = "tourist_mode">Tourist</label>
+				        <input type="radio" name="map_mode" id="expert_mode" value="expert_mode">
+				        <label for = "expert_mode">Expert</label>
+				    </div>
+				    <div id="checkbox_form">
+				        <input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Wind" value="Wind">
+				        <label for = "exp_mode_chkbx_Wind">Wind</label>
+				        <input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Pressure" value="Pressure">
+				        <label for = "exp_mode_chkbx_Pressure">Pressure</label>
+				        <input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Waves" value="Waves">
+				        <label for = "exp_mode_chkbx_Waves">Waves</label>
+				        <input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Temperature" value="Temperature">
+				        <label for = "exp_mode_chkbx_Temperature">Temperature</label>
+				        <input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Rain" value="Rain">
+				        <label for = "exp_mode_chkbx_Rain">Rain</label>
+				    </div>
+				</div>
+			</div><!-- Content -->
+		    
 		    <!-- Map -->
 		    <div id="appWrapper">
 		        <div id="map_canvas"></div>
