--- a/Seapal_play/app/views/_include/header_app.scala.html
+++ b/Seapal_play/app/views/_include/header_app.scala.html
@@ -11,3 +11,4 @@
 <script src="@routes.Assets.at("javascripts/app/map/validation.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("javascripts/app/map/contextMenu.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("javascripts/app/map/TxtOverlay.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/app/map/weather_overlay.js")" type="text/javascript"></script>
