load and store buttons added with a little styling

--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -57,6 +57,21 @@
 		        </div>
 		    </div>
 		    
+		    <!-- load and store routes -->
+		    <div class="btn-group" id="loadStoreButtons">
+		    
+			  <a class="btn dropdown-toggle" data-toggle="dropdown" href="#" id="load_button">
+			    load
+			    <span class="caret"></span>
+			  </a>
+			  <ul class="dropdown-menu">
+			    <!-- dropdown menu links -->
+			  </ul>
+			  
+		      <input type="button" class="btn" value="save" id="save_button"/>
+		      
+			</div>
+		    
 		    <!-- Current Position -->
 		    <div id="followCurrentPositionContainer">
 		        <div id="followCurrentPosition_button" class="well">
@@ -64,6 +79,7 @@
 		        </div>
 		    </div>
 		    
+		    <!-- Weather overlay -->
 		    <div id="weatherModeContainer">
 		        <div id="weatherMode_choices" class="well">
 			        Weather Mode:
