--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,75 +1,85 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(data: String)
+@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(data: String)(logbook_selection_menu: Html)
 
 <!DOCTYPE html>
 
 <html>
-    <head>
-    
-    	<!-- Header -->
-        @header
-        
-    </head>
-    <body>
-    
-    	<!-- Navigation -->
-    	@navigation
-    	
-    	<!-- Container -->
-    	<div class="container-fluid">
-    	
-	    	<!-- Navigation -->
-	    	@navigation_app
-	
-			<!-- Content -->
-			<div id="appWrapper" align="center">
-		        <br />
- 				@logbook_boatinfo
-		        <br />
-		        <br />
-		        @logbook_weatherinfo
-		        <br />
-		        <br />
-		        <div class="appTableDiv" align="center">
-		            <table class="appTable table table-hover" cellspacing="0px" cellpadding="5px">
-		                <thead>
-		                    <tr>
-		                        <th>Bootsname</th>
-		                        <th>Bootstyp</th>
-		                        <th>Konstrukteur</th>
-		                        <th>Baujahr</th>
-		                        <th>Heimathafen</th>
-		                        <th>L&auml;nge</th>
-		                        <th>Breite</th>
-		                        <th>Tiefgang</th>
-		                        <th>Inhaber</th>
-		                        <th></th>
-		                    </tr>
-		                </thead>
-		                <tbody id="entries">
-			                @Html(data)
-		                </tbody>
-		            </table>
-		            <br /><br />
-		        </div>
-			</div><!-- Content -->   
-		</div><!-- Container -->
-	
-		<!-- Menu Modal -->
-		<div class="modal hide fade" id="messageBox">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3 id="dialogTitle"></h3>
+<head>
+
+<!-- Header -->
+@header
+
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/boatinfo.css")">
+<script src="@routes.Assets.at("javascripts/app/boatinfo/boatinfo.js")" type="text/javascript"></script>
+
+</head>
+<body>
+
+	<!-- Navigation -->
+	@navigation
+
+	<!-- Container -->
+	<div class="container-fluid">
+
+		<!-- Navigation -->
+		@navigation_app
+
+		<!-- Content -->
+		<div id="appWrapper" align="center">
+			<br />
+			@logbook_boatinfo
+			<br />
+			<br />
+			@logbook_weatherinfo
+			<br />
+			<br />
+			<div class="appTableDiv" align="center">
+				<table class="appTable table table-hover" cellspacing="0px"
+					cellpadding="5px">
+					<thead>
+						<tr>
+							<th>Bootsname</th>
+							<th>Bootstyp</th>
+							<th>Konstrukteur</th>
+							<th>Baujahr</th>
+							<th>Heimathafen</th>
+							<th>L&auml;nge</th>
+							<th>Breite</th>
+							<th>Tiefgang</th>
+							<th>Inhaber</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody id="entries">
+					@Html(data)
+					</tbody>
+				</table>
+				<br />
+				<br />
 			</div>
-			<div class="modal-body">
-				<p id="dialogMessage"></p>
-			</div>
-			<div class="modal-footer">
-				<a href="#" class="btn" data-dismiss="modal"><i class="icon-ok"></i> ok</a>
-			</div>
+			@logbook_selection_menu			
 		</div>
-		
-		<!-- Additional Scripts -->
-		<script src="@routes.Assets.at("javascripts/app/ajax/boatinfo.js")" type="text/javascript"></script>
-		
-	</body>
+		<!-- Content -->
+	</div>
+	<!-- Container -->
+
+	<!-- Menu Modal -->
+	<div class="modal hide fade" id="messageBox">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal"
+				aria-hidden="true">&times;</button>
+			<h3 id="dialogTitle"></h3>
+		</div>
+		<div class="modal-body">
+			<p id="dialogMessage"></p>
+		</div>
+		<div class="modal-footer">
+			<a href="#" class="btn" data-dismiss="modal"><i class="icon-ok"></i>
+				ok</a>
+		</div>
+	</div>
+
+	<!-- Additional Scripts -->
+	<script src="@routes.Assets.at("javascripts/app/ajax/boatinfo.js")" type="text/javascript"></script>
+
+</body>
 </html>
