--- a/Seapal_play/app/views/_include/logbook_selection_menu.scala.html
+++ b/Seapal_play/app/views/_include/logbook_selection_menu.scala.html
@@ -1,10 +1,33 @@
+@(file: String)
+
 <div class="overlay" id="overlay" style="display: none;"></div>
 
 <div class="box" id="box">
 	<a class="boxclose" id="boxclose"></a>
-	<h1>Important message</h1>
-	<p>Here comes a very important message for your user. Turn this
-		window off by clicking the cross.</p>
+
+	<div class="appTableDiv2" align="center">
+		<table class="appTable table table-hover2" cellspacing="0px"
+			cellpadding="5px">
+			<thead>
+				<tr>
+					<th>Bootsname</th>
+					<th>Bootstyp</th>
+					<th>Konstrukteur</th>
+					<th>Baujahr</th>
+					<th>Heimathafen</th>
+					<th>L&auml;nge</th>
+					<th>Breite</th>
+					<th>Tiefgang</th>
+					<th>Inhaber</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody id="entries2">
+			@Html(file)
+			</tbody>
+		</table>
+		<br /> <br />
+	</div>
 </div>
 
 <input type="submit" class="btn" id="activator" name="activator"
