--- a/Seapal_play/public/stylesheets/app/logbook_selection_menu.css
+++ b/Seapal_play/public/stylesheets/app/logbook_selection_menu.css
@@ -1,18 +1,20 @@
 .overlay{
-    background:transparent url(images/overlay.png) repeat top left;
     position:fixed;
     top:0px;
     bottom:0px;
     left:0px;
     right:0px;
     z-index:100;
+    background-color: #000;
+    display: none;
+    opacity: 0.5;
 }
 
 .box{
     position:fixed;
-    top:-200px;
-    left:30%;
-    right:30%;
+    top:-300px;
+    left:10%;
+    right:10%;
     background-color:#fff;
     color:#7F7F7F;
     padding:20px;
@@ -27,11 +29,12 @@
 
 a.boxclose{
     float:right;
-    width:26px;
-    height:26px;
-    background:transparent url(images/cancel.png) repeat top left;
-    margin-top:-30px;
-    margin-right:-30px;
+    width:16px;
+    height:16px;
+    background:transparent url(../img/glyphicons-halflings.png) repeat top left;
+    background-position: -312px 0;
+    margin-top:-10px;
+    margin-right:-10px;
     cursor:pointer;
 }
 
