menu now looks quite pretty

--- a/Seapal_play/app/views/_include/logbook_boatinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook_boatinfo.scala.html
@@ -121,8 +121,10 @@
 			</div>
 		</div>
 		<div class="control-group">
+			<input class="btn" type="button" id="load_boat_info" value="Laden" class="button" />
 			<input type="reset" class="btn" id="delete" value="L&ouml;schen"
-				class="button" /> <input type="submit" class="btn" id="save"
+				class="button" />
+			<input type="submit" class="btn" id="save"
 				name="submit" value="Speichern" class="button" />
 		</div>
 	</form>
