--- a/Seapal_play/app/views/_include/logbook_selection_menu.scala.html
+++ b/Seapal_play/app/views/_include/logbook_selection_menu.scala.html
@@ -1,12 +1,12 @@
 @(file: String)
 
-<div class="overlay" id="overlay" style="display: none;"></div>
+<div class="overlay_boat_info" id="overlay_boat_info" style="display: none;"></div>
 
-<div class="box" id="box">
-	<a class="boxclose" id="boxclose"></a>
+<div class="box_boat_info" id="box_boat_info">
+	<a class="boxclose_boat_info" id="boxclose_boat_info"></a>
 
-	<div class="appTableDiv2" align="center">
-		<table class="appTable table table-hover2" cellspacing="0px"
+	<div class="appTableDiv_boat_info" align="center">
+		<table class="appTable table table-hover_boat_info" cellspacing="0px"
 			cellpadding="5px">
 			<thead>
 				<tr>
@@ -22,13 +22,10 @@
 					<th></th>
 				</tr>
 			</thead>
-			<tbody id="entries2">
+			<tbody id="entries_boat_info">
 			@Html(file)
 			</tbody>
 		</table>
 		<br /> <br />
 	</div>
 </div>
-
-<input type="submit" class="btn" id="activator" name="activator"
-	value="aktivieren" class="button" />
