--- a/Seapal_play/public/stylesheets/app/logbook_selection_menu.css
+++ b/Seapal_play/public/stylesheets/app/logbook_selection_menu.css
@@ -1,4 +1,4 @@
-.overlay{
+.overlay_boat_info{
     position:fixed;
     top:0px;
     bottom:0px;
@@ -10,11 +10,12 @@
     opacity: 0.5;
 }
 
-.box{
+.box_boat_info{
     position:fixed;
-    top:-300px;
+    top:-1000px;
     left:10%;
     right:10%;
+    overflow:auto;
     background-color:#fff;
     color:#7F7F7F;
     padding:20px;
@@ -27,7 +28,7 @@
     z-index:101;
 }
 
-a.boxclose{
+a.boxclose_boat_info{
     float:right;
     width:16px;
     height:16px;
@@ -36,17 +37,4 @@ a.boxclose{
     margin-top:-10px;
     margin-right:-10px;
     cursor:pointer;
-}
-
-.box h1{
-    border-bottom: 1px dashed #7F7F7F;
-    margin:-20px -20px 0px -20px;
-    padding:10px;
-    background-color:#FFEFEF;
-    color:#EF7777;
-    -moz-border-radius:20px 20px 0px 0px;
-    -webkit-border-top-left-radius: 20px;
-    -webkit-border-top-right-radius: 20px;
-    -khtml-border-top-left-radius: 20px;
-    -khtml-border-top-right-radius: 20px;
 }
