--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,15 +1,18 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(data: String)(logbook_selection_menu: Html)
+@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(map_content: Html)
 
 <!DOCTYPE html>
 
 <html>
 <head>
 
-<!-- Header -->
-@header
+		<!-- Header -->
+        @header
+        
+        <!-- Header App -->
+        @header_app
 
 </head>
-<body>
+<body onload="initialize();">
 
 	<!-- Navigation -->
 	@navigation
@@ -21,7 +24,10 @@
 		@navigation_app
 
 		<!-- Content -->
+		@logbook_boatinfo_menu
+		@logbook_trip_menu
 		<div id="appWrapper" align="center">
+			<input class="btn" type="button" id="load_trip" value="Trip laden" class="button" />
 			<br />
 			@logbook_boatinfo
 			<br />
@@ -29,31 +35,7 @@
 			@logbook_weatherinfo
 			<br />
 			<br />
-			<div class="appTableDiv" align="center">
-				<table class="appTable table table-hover" cellspacing="0px"
-					cellpadding="5px">
-					<thead>
-						<tr>
-							<th>Bootsname</th>
-							<th>Bootstyp</th>
-							<th>Konstrukteur</th>
-							<th>Baujahr</th>
-							<th>Heimathafen</th>
-							<th>L&auml;nge</th>
-							<th>Breite</th>
-							<th>Tiefgang</th>
-							<th>Inhaber</th>
-							<th></th>
-						</tr>
-					</thead>
-					<tbody id="entries">
-					@Html(data)
-					</tbody>
-				</table>
-				<br />
-				<br />
-			</div>
-			@logbook_selection_menu
+			@map_content
 		</div>
 		<!-- Content -->
 	</div>
