--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(map_content: Html)
+@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
 
 <!DOCTYPE html>
 
@@ -8,8 +8,10 @@
 		<!-- Header -->
         @header
         
-        <!-- Header App -->
-        @header_app
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/map.css")">
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
+        <script src="@routes.Assets.at("javascripts/jquery/jquery-ui.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app/map/simple_map_init.js")" type="text/javascript"></script>
 
 </head>
 <body onload="initialize();">
@@ -24,18 +26,27 @@
 		@navigation_app
 
 		<!-- Content -->
+		<!-- selection menu for boat infos -->
 		@logbook_boatinfo_menu
+
+		<!-- selection menu for trips -->
 		@logbook_trip_menu
+		
 		<div id="appWrapper" align="center">
 			<input class="btn" type="button" id="load_trip" value="Trip laden" class="button" />
-			<br />
-			@logbook_boatinfo
-			<br />
-			<br />
-			@logbook_weatherinfo
-			<br />
-			<br />
-			@map_content
+				<br />
+				<!-- boat info form -->
+				@logbook_boatinfo
+				
+				<br />
+				<br />
+				<!-- weather info form -->
+				@logbook_weatherinfo
+				
+				<br />
+				<br />
+				<!-- simple map to show trip -->
+				@simple_map
 		</div>
 		<!-- Content -->
 	</div>
