little umlaut correction

--- a/Seapal_play/app/views/trip.scala.html
+++ b/Seapal_play/app/views/trip.scala.html
@@ -73,7 +73,7 @@
 			                    </div>	
 			                    <div class="control-group">
 			            			<label class="control-label"></label>
-			            			<span>Tank gefüllt<input type="checkbox" value="false" name="tank" id="tank" style="margin-left:20px; margin-top:-5px;"/></span>
+			            			<span>Tank gef&uuml;llt<input type="checkbox" value="false" name="tank" id="tank" style="margin-left:20px; margin-top:-5px;"/></span>
 			                    </div>			                            
 		            		</div>
 		            	</div>      	 
