--- a/Seapal_play/app/views/_include/simple_map.scala.html
+++ b/Seapal_play/app/views/_include/simple_map.scala.html
@@ -1,4 +1,6 @@
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/simple_map.css")">
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
+<script src="@routes.Assets.at("javascripts/app/map/simple_map_init.js")" type="text/javascript"></script>
+
 <!-- Map -->
-<div id="appWrapper">
-	<div id="map_canvas"></div>
-</div>
+<div id="map_canvas"></div>
