--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
+@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
 
 <!DOCTYPE html>
 
@@ -7,11 +7,7 @@
 
 		<!-- Header -->
         @header
-        
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/map.css")">
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
-        <script src="@routes.Assets.at("javascripts/jquery/jquery-ui.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app/map/simple_map_init.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app/logbook/print_trip.js")" type="text/javascript"></script>
 
 </head>
 <body onload="initialize();">
@@ -34,19 +30,20 @@
 		
 		<div id="appWrapper" align="center">
 			<input class="btn" type="button" id="load_trip" value="Trip laden" class="button" />
-				<br />
-				<!-- boat info form -->
-				@logbook_boatinfo
+			<br />
+			<!-- boat info form -->
+			@logbook_boatinfo
 				
-				<br />
-				<br />
-				<!-- weather info form -->
-				@logbook_weatherinfo
+			<br />
+			<br />
+			<!-- weather info form -->
+			@logbook_weatherinfo
 				
-				<br />
-				<br />
-				<!-- simple map to show trip -->
-				@simple_map
+			<br />
+			<br />
+			<!-- simple map to show trip -->
+			<input class="btn" type="button" id="show_trip" value="Trip zeigen" class="button" />
+			@simple_map
 		</div>
 		<!-- Content -->
 	</div>
