--- a/app/views/boatinfo.scala.html
+++ b/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html, navigation: Html, navigation_app: Html, data: String)
+@(navigation: Html, navigation_app: Html, data: String, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
