--- a/app/views/waypoint.scala.html
+++ b/app/views/waypoint.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)
+@(navigation: Html, navigation_app: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
