--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -7,6 +7,7 @@
 
 		<!-- Header -->
         @header
+        <script src="@routes.Assets.at("javascripts/app/logbook/weather_data.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app/logbook/print_trip.js")" type="text/javascript"></script>
 
 </head>
@@ -42,7 +43,6 @@
 			<br />
 			<br />
 			<!-- simple map to show trip -->
-			<input class="btn" type="button" id="show_trip" value="Trip zeigen" class="button" />
 			@simple_map
 		</div>
 		<!-- Content -->
