buttons for boat selection are now only visible if needed

--- a/Seapal_play/app/views/_include/logbook_boatinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook_boatinfo.scala.html
@@ -121,11 +121,11 @@
 			</div>
 		</div>
 		<div class="control-group">
-			<input class="btn" type="button" id="load_boat_info" value="Laden" class="button" />
+			<input class="btn" type="button" id="load_boat_info" value="Laden" class="button" style="visibility:hidden"/>
 			<input type="reset" class="btn" id="delete" value="L&ouml;schen"
-				class="button" />
+				class="button" style="visibility:hidden"/>
 			<input type="submit" class="btn" id="save"
-				name="submit" value="Speichern" class="button" />
+				name="submit" value="Speichern" class="button" style="visibility:hidden"/>
 		</div>
 	</form>
 </div>
