--- a/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
@@ -2,7 +2,7 @@
 <br />
 <div class="container-fluid">
 	<form class="form-horizontal">
-		<div class="row well" style="margin-left: 15%;">
+		<div class="row well" id="boat_info_table" style="margin-left: 15%;">
 			<div class="span4" align="center">
 				<div class="control-group">
 					<label class="control-label">Bootname</label> <input
