--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -9,6 +9,7 @@
         @header
         <script src="@routes.Assets.at("javascripts/app/logbook/weather_data.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app/logbook/print_trip.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app/logbook/boat_data.js")" type="text/javascript"></script>
 
 </head>
 <body onload="initialize();">
