--- a/Seapal_play/app/views/_include/logbook/simple_map.scala.html
+++ b/Seapal_play/app/views/_include/logbook/simple_map.scala.html
@@ -3,4 +3,4 @@
 <script src="@routes.Assets.at("javascripts/app/map/simple_map_init.js")" type="text/javascript"></script>
 
 <!-- Map -->
-<div id="map_canvas"></div>
+<div id="map_canvas" style="visibility: hidden"></div>
