own maptype for routes

--- a/Seapal_play/app/views/trip.scala.html
+++ b/Seapal_play/app/views/trip.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)(route_menu: Html)(route_info: Html)(simple_map: Html)
+@(header: Html)(navigation: Html)(navigation_app: Html)(route_menu: Html)(route_info: Html)(route_map: Html)
 
 <!DOCTYPE html>
 
@@ -31,7 +31,7 @@
 	            @route_info
 	            
 	            <!-- simple map to show trip -->
-				@simple_map
+				@route_map
 	        </div><!-- Content --> 
 		</div><!-- Container -->
 		
