--- a/Seapal_play/app/views/_include/route/route_map.scala.html
+++ b/Seapal_play/app/views/_include/route/route_map.scala.html
@@ -1,27 +1,20 @@
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/simple_map.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/route_map.css")">
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
-<script src="@routes.Assets.at("javascripts/app/map/route_map_init.js") type="text/javascript"></script>
-<script src="@routes.Assets.at("javascripts/app/route/route_draggable_marker.js") type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/app/map/route_map_init.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/app/route/route_draggable_marker.js")" type="text/javascript"></script>
 
 <!-- Map -->
+
 <div id="map_canvas" style="visibility: hidden"></div>
 
-<div id="map"></div>
-
-    <div id="markers">
-
-        <div id="m1" class="drag" style="left:0; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/ltblue-dot.png')">
-
-        </div>
-
-        <div id="m2" class="drag" style="left:50px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/orange-dot.png')">
-
-        </div>
-
-        <div id="m3" class="drag" style="left:100px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/pink-dot.png')">
-
-        </div>
-
-    </div>
-
+<div id="markers" style="visibility: hidden">
+	<div id="m1" class="drag"
+		style="left: 0; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/ltblue-dot.png')">
+	</div>
+	<div id="m2" class="drag"
+		style="left: 50px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/orange-dot.png')">
+	</div>
+	<div id="m3" class="drag"
+		style="left: 100px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/pink-dot.png')">
+	</div>
 </div>
