draggable marker working

--- a/Seapal_play/app/views/_include/route/route_map.scala.html
+++ b/Seapal_play/app/views/_include/route/route_map.scala.html
@@ -9,12 +9,12 @@
 
 <div id="markers" style="visibility: hidden">
 	<div id="m1" class="drag"
-		style="left: 0; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/ltblue-dot.png')">
+		style="left: 0; background-image: url('/assets/images/icons/tonne_gruen.png')">
 	</div>
 	<div id="m2" class="drag"
-		style="left: 50px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/orange-dot.png')">
+		style="left: 50px; background-image: url('/assets/images/icons/tonne_rot.png')">
 	</div>
 	<div id="m3" class="drag"
-		style="left: 100px; background-image: url('http://maps.gstatic.com/mapfiles/ms/icons/pink-dot.png')">
+		style="left: 100px; background-image: url('/assets/images/icons/tonne_lila.png')">
 	</div>
 </div>
