charts for wind, waves and pressure are there, slider still missing
everyhing needs to be positioned

--- a/Seapal_play/app/views/_include/map/map_weather_overlays.scala.html
+++ b/Seapal_play/app/views/_include/map/map_weather_overlays.scala.html
@@ -3,31 +3,25 @@
 	<div id="weatherMode_choices" class="well">
 		Weather Mode:
 		<div id="radio_form">
-			<input type="radio" name="map_mode" id="sailor_mode"
-				value="sailor_mode"> <label for="sailor_mode"
-				class="modeLabel">Sailor</label> <input type="radio" name="map_mode"
-				id="tourist_mode" value="tourist_mode"> <label
-				for="tourist_mode" class="modeLabel">Tourist</label> <input
-				type="radio" name="map_mode" id="expert_mode" value="expert_mode">
-			<label for="expert_mode" class="modeLabel">Expert</label>
+			<input type="radio" name="map_mode" id="sailor_mode" value="sailor_mode">
+				<label for="sailor_mode" class="modeLabel">Sailor</label>
+			<input type="radio" name="map_mode" id="tourist_mode" value="tourist_mode">
+				<label for="tourist_mode" class="modeLabel">Tourist</label>
+			<input type="radio" name="map_mode" id="expert_mode" value="expert_mode">
+				<label for="expert_mode" class="modeLabel">Expert</label>
 		</div>
 		<br>
 		<div id="checkbox_form">
-			<input type="checkbox" name="exp_mode_chkbx_value[]"
-				id="exp_mode_chkbx_Wind" value="Wind"> <label
-				for="exp_mode_chkbx_Wind" class="modeLabel">Wind</label> <input
-				type="checkbox" name="exp_mode_chkbx_value[]"
-				id="exp_mode_chkbx_Pressure" value="Pressure"> <label
-				for="exp_mode_chkbx_Pressure" class="modeLabel">Pressure</label> <input
-				type="checkbox" name="exp_mode_chkbx_value[]"
-				id="exp_mode_chkbx_Waves" value="Waves"> <label
-				for="exp_mode_chkbx_Waves" class="modeLabel">Waves</label> <input
-				type="checkbox" name="exp_mode_chkbx_value[]"
-				id="exp_mode_chkbx_Temperature" value="Temperature"> <label
-				for="exp_mode_chkbx_Temperature" class="modeLabel">Temperature</label>
-			<input type="checkbox" name="exp_mode_chkbx_value[]"
-				id="exp_mode_chkbx_Rain" value="Rain"> <label
-				for="exp_mode_chkbx_Rain" class="modeLabel">Rain</label>
+			<input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Wind" value="Wind">
+				<label for="exp_mode_chkbx_Wind" class="modeLabel">Wind</label>
+			<input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Pressure" value="Pressure">
+				<label for="exp_mode_chkbx_Pressure" class="modeLabel">Pressure</label>
+			<input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Waves" value="Waves">
+				<label for="exp_mode_chkbx_Waves" class="modeLabel">Waves</label>
+			<input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Temperature" value="Temperature">
+				<label for="exp_mode_chkbx_Temperature" class="modeLabel">Temperature</label>
+			<input type="checkbox" name="exp_mode_chkbx_value[]" id="exp_mode_chkbx_Rain" value="Rain">
+				<label for="exp_mode_chkbx_Rain" class="modeLabel">Rain</label>
 		</div>
 	</div>
 </div>
