--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(map_content: Html)
+@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(map_content: Html)(weather_chart: Html)
 
 <!DOCTYPE html>
 
@@ -25,6 +25,9 @@
 
 			<!-- Map -->
 			@map_content
+			
+			<!-- Weather Charts -->
+			@weather_chart
 
 		</div><!-- Container -->
 	</body>
