weather charts for map

--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -23,12 +23,20 @@
     		<!-- Navigation -->
     		@navigation_app
 
-			<!-- Map -->
-			@map_content
+			<div class="row-fluid">
 			
-			<!-- Weather Charts -->
-			@weather_chart
+				<div class="span8">
+					<!-- Map -->
+					@map_content
+				</div>
+				
+				<div class="span4">
+					<!-- Weather Charts -->
+					@weather_chart
+				</div>
 
+			</div>
+			
 		</div><!-- Container -->
 	</body>
 </html>
