--- a/Seapal_play/app/views/_include/map/weather_chart.scala.html
+++ b/Seapal_play/app/views/_include/map/weather_chart.scala.html
@@ -6,23 +6,97 @@
 
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
 
-<div id="windContainer"
-	style="width: 500px; height: 400px; margin: 0 auto"></div>
-<div id="waveContainer"
-	style="width: 500px; height: 400px; margin: 0 auto"></div>
-<div id="pressureContainer"
-	style="width: 400px; height: 300px; margin: 0 auto"></div>
+<div id="chartContainer">
 
-<input type="range" min="0" max="8" value="0" step="1" style="width: 300px"/><br>
+	<div class="row-fluid" id="roseContainer">
 
-<div id="rangeValue" style="width: 300px">
-	<div id="zeroEight">0/8</div>
-	<div id="oneEight">1/8</div>
-	<div id="twoEight">2/8</div>
-	<div id="threeEight">3/8</div>
-	<div id="fourEight">4/8</div>
-	<div id="fiveEight">5/8</div>
-	<div id="sixEight">6/8</div>
-	<div id="sevenEight">7/8</div>
-	<div id="eightEight">8/8</div>
+		<div class="row-fluid">
+			<div class="span6">
+				<div class="row-fluid">
+					<div class="span9">
+						<h4>Windrichtung/</h4><h4>Windgeschwindigkeit</h4>
+						<div class="span9" id="windContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="span6">
+				<div class="row-fluid">
+					<div class="span9">
+						<h4>Wellenrichtung/</h4><h4>Wellenh&ouml;he</h4>
+						<div class="span9" id="waveContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+			
+	</div>
+	
+	<div class="row-fluid" id="restContainer">
+	
+		<div class="row-fluid">
+		
+			<div class="span6">
+				<div class="row-fluid">
+					<div class="span9">
+						<h4>Luftdruck</h4>
+						<div class="span9" id="pressureContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
+					</div>
+				</div>
+			</div>	
+				
+			<div class="span6">
+				<div class="row-fluid">
+					<div class="span9">
+						<h4>Bew&ouml;lkung</h4>
+						<div class="row-fluid">
+							<div class="span2">
+								<input id="cloudSlider" type="range" min="0" max="8" value="0" step="1"/><br>
+								<div id="cloudValues">
+									<div class="cloudValue">0/8</div>
+									<div class="cloudValue">1/8</div>
+									<div class="cloudValue">2/8</div>
+									<div class="cloudValue">3/8</div>
+									<div class="cloudValue">4/8</div>
+									<div class="cloudValue">5/8</div>
+									<div class="cloudValue">6/8</div>
+									<div class="cloudValue">7/8</div>
+									<div class="cloudValue">8/8</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>		
+			</div>
+
+			<div class="span6" style="padding-top: 50px">
+				<div class="row-fluid">
+					<div class="span9">
+						<h4>Niederschlag in mm/h</h4>
+						<div class="row-fluid">
+							<div class="span2">
+								<input id="rainSlider" type="range" min="0" max="11" value="0" step="1"/><br>
+								<div id="rainValues">
+									<div class="rainValue" style="padding-right:10px; margin-left: 2px">0</div>
+									<div class="rainValue" style="padding-right:10px">1</div>
+									<div class="rainValue" style="padding-right:10px">2</div>
+									<div class="rainValue" style="padding-right:10px">3</div>
+									<div class="rainValue" style="padding-right:10px">4</div>
+									<div class="rainValue" style="padding-right:10px">5</div>
+									<div class="rainValue" style="padding-right:10px">6</div>
+									<div class="rainValue" style="padding-right:0px">8</div>
+									<div class="rainValue" style="padding-right:2px; margin-left: 4px">10</div>
+									<div class="rainValue" style="padding-right:2px">12</div>
+									<div class="rainValue" style="padding-right:2px">16</div>
+									<div class="rainValue" style="padding-right:0px">20</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>		
+			</div>
+		</div>
+		
+	</div>
+
 </div>
