--- a/Seapal_play/public/stylesheets/app/weather_chart.css
+++ b/Seapal_play/public/stylesheets/app/weather_chart.css
@@ -1,3 +1,27 @@
-#rangeValue {
-	display: 'inline'
+#cloudSlider {
+	width: 250px;
 }
+
+#cloudValues {
+	width: 270px;
+	margin-left: -5px;
+}
+
+.cloudValue {
+	display: inline;
+	margin: 2.4px;
+}
+
+#rainSlider {
+	width: 250px;
+}
+
+#rainValues {
+	width: 270px;
+}
+
+.rainValue {
+	display: inline;
+}
+
+
