--- a/seapal_play2.1/app/views/landing.scala.html
+++ b/seapal_play2.1/app/views/landing.scala.html
@@ -79,7 +79,7 @@
     <body>
         <video id="video_background" preload="auto" autoplay="true" loop muted><!-- hier video source angeben-->
          <source src="@routes.Assets.at("video/bg2.mp4")" type="video/mp4">
-         <source src="@routes.Assets.at("video/bg2.webm")" type="video/mp4">
+         <source src="@routes.Assets.at("video/bg2.webm")" type="video/webm">
           Video not supported
         </video>
     <img src="@routes.Assets.at("images/icons/seapal_normal.png")" id="pic">
