--- a/seapal_play2.1/app/views/landing.scala.html
+++ b/seapal_play2.1/app/views/landing.scala.html
@@ -74,19 +74,9 @@
         }
         </style>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-        <!--script type="text/javascript">
-        $(document).ready(function() {
-            var vid = document.getElementById("video_background");
-            vid.addEventListener('ended', function() {
-                alert('video ended');
-                vid.currentTime = 0.1;
-                vid.play();
-            }, false);
-        });
-        </script-->
     </head>
     <body>
-        <video id="video_background" preload="auto" autoplay="true" muted ended="alert('video ended');">
+        <video id="video_background" preload="auto" autoplay="true" muted loop="loop">
          <source src="@routes.Assets.at("video/bg2.mp4")" type="video/mp4">
          <source src="@routes.Assets.at("video/bg2.webm")" type="video/webm">
           Video not supported
