weather chart updated

--- a/Seapal_play/public/stylesheets/app/weather_chart.css
+++ b/Seapal_play/public/stylesheets/app/weather_chart.css
@@ -12,15 +12,15 @@
 	margin: 2.4px;
 }
 
-#rainSlider {
+#tempSlider {
 	width: 250px;
 }
 
-#rainValues {
+#tempValues {
 	width: 270px;
 }
 
-.rainValue {
+.tempValue {
 	display: inline;
 }
 
