--- a/Seapal_play/app/views/_include/map/weather_chart.scala.html
+++ b/Seapal_play/app/views/_include/map/weather_chart.scala.html
@@ -2,7 +2,6 @@
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
 <script src="http://code.highcharts.com/modules/data.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
-<script src="@routes.Assets.at("javascripts/app/map/weather_chart.js")" type="text/javascript"></script>
 
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
 
@@ -52,17 +51,7 @@
 						<div class="row-fluid">
 							<div class="span2">
 								<input id="cloudSlider" type="range" min="0" max="8" value="0" step="1"/><br>
-								<div id="cloudValues">
-									<div class="cloudValue">0/8</div>
-									<div class="cloudValue">1/8</div>
-									<div class="cloudValue">2/8</div>
-									<div class="cloudValue">3/8</div>
-									<div class="cloudValue">4/8</div>
-									<div class="cloudValue">5/8</div>
-									<div class="cloudValue">6/8</div>
-									<div class="cloudValue">7/8</div>
-									<div class="cloudValue">8/8</div>
-								</div>
+								<span id="currentCloudValue"></span>
 							</div>
 						</div>
 					</div>
@@ -72,24 +61,11 @@
 			<div class="span6" style="padding-top: 50px">
 				<div class="row-fluid">
 					<div class="span9">
-						<h4>Niederschlag in mm/h</h4>
+						<h4>Temperatur</h4>
 						<div class="row-fluid">
 							<div class="span2">
-								<input id="rainSlider" type="range" min="0" max="11" value="0" step="1"/><br>
-								<div id="rainValues">
-									<div class="rainValue" style="padding-right:10px; margin-left: 2px">0</div>
-									<div class="rainValue" style="padding-right:10px">1</div>
-									<div class="rainValue" style="padding-right:10px">2</div>
-									<div class="rainValue" style="padding-right:10px">3</div>
-									<div class="rainValue" style="padding-right:10px">4</div>
-									<div class="rainValue" style="padding-right:10px">5</div>
-									<div class="rainValue" style="padding-right:10px">6</div>
-									<div class="rainValue" style="padding-right:0px">8</div>
-									<div class="rainValue" style="padding-right:2px; margin-left: 4px">10</div>
-									<div class="rainValue" style="padding-right:2px">12</div>
-									<div class="rainValue" style="padding-right:2px">16</div>
-									<div class="rainValue" style="padding-right:0px">20</div>
-								</div>
+								<input id="tempSlider" type="range" min="-10" max="40" value="20" step="1"/><br>
+								<span id="currentTempValue"></span>
 							</div>
 						</div>
 					</div>
