--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -12,6 +12,7 @@
         @header_app
         
         <script src="@routes.Assets.at("javascripts/app/map/map_weather_data.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app/map/weather_chart.js")" type="text/javascript"></script>
         
     </head>
     <body onload="initialize();">
