weather chart for big map now works quite good :-)

--- a/Seapal_play/app/views/_include/map/weather_chart.scala.html
+++ b/Seapal_play/app/views/_include/map/weather_chart.scala.html
@@ -50,7 +50,7 @@
 						<h4>Bew&ouml;lkung</h4>
 						<div class="row-fluid">
 							<div class="span2">
-								<input id="cloudSlider" type="range" min="0" max="8" value="0" step="1"/><br>
+								<input id="cloudSlider" type="range" min="0" max="8" value="0" step="1" readonly="readonly"/><br>
 								<span id="currentCloudValue"></span>
 							</div>
 						</div>
@@ -64,7 +64,7 @@
 						<h4>Temperatur</h4>
 						<div class="row-fluid">
 							<div class="span2">
-								<input id="tempSlider" type="range" min="-10" max="40" value="20" step="1"/><br>
+								<input id="tempSlider" type="range" min="-10" max="40" value="20" step="1" readonly="readonly"/><br>
 								<span id="currentTempValue"></span>
 							</div>
 						</div>
