--- a/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
@@ -123,7 +123,7 @@
 			</div>
 		</div>
 		<div class="control-group">
-			<input class="btn" type="button" id="load_boat_info" value="Laden"
+			<input class="btn" type="button" id="load_boat_info" value="Boot laden"
 				class="button" style="display: none" />
 			<!-- <input type="submit" class="btn" id="save"
 				name="submit" value="Speichern" class="button" style="visibility:hidden"/> -->
