--- a/Seapal_play/public/stylesheets/app/route_map.css
+++ b/Seapal_play/public/stylesheets/app/route_map.css
@@ -1,7 +1,7 @@
 #map_canvas {
 	float: left;
-    width: 60%;
-    height: 500px;
+    width: 500px;
+    height: 300px;
     margin: auto;
     margin-left: 20%;
 }
