weather chart for map is working; weather chart for logbook is on a good way :-)

--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
+@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_tripinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
 
 <!DOCTYPE html>
 
@@ -35,6 +35,10 @@
 			<br />
 			<!-- boat info form -->
 			@logbook_boatinfo
+			<br />
+			
+			<!-- Trip info form -->
+			@logbook_tripinfo
 				
 			<br />
 			<br />
