--- a/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook/logbook_boatinfo.scala.html
@@ -1,6 +1,5 @@
 
-<div class="container-fluid" id="boat_info_table"
-	style="display: none">
+<div class="container-fluid" id="boat_info_table" style="display: none">
 	<h2>Boot Informationen</h2>
 	<br />
 	<form class="form-horizontal">
