--- a/Seapal_play/app/views/_include/map/weather_chart.scala.html
+++ b/Seapal_play/app/views/_include/map/weather_chart.scala.html
@@ -35,7 +35,7 @@
 	
 		<div class="row-fluid">
 		
-			<div class="span6">
+			<div class="span4">
 				<div class="row-fluid">
 					<div class="span9">
 						<h4>Luftdruck</h4>
@@ -43,34 +43,25 @@
 					</div>
 				</div>
 			</div>	
-				
-			<div class="span6">
+			
+			<div class="span4">
 				<div class="row-fluid">
 					<div class="span9">
 						<h4>Bew&ouml;lkung</h4>
-						<div class="row-fluid">
-							<div class="span2">
-								<input id="cloudSlider" type="range" min="0" max="8" value="0" step="1" readonly="readonly"/><br>
-								<span id="currentCloudValue"></span>
-							</div>
-						</div>
+						<div class="span9" id="cloudContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
 					</div>
-				</div>		
+				</div>
 			</div>
-
-			<div class="span6" style="padding-top: 50px">
+			
+			<div class="span4">
 				<div class="row-fluid">
 					<div class="span9">
 						<h4>Temperatur</h4>
-						<div class="row-fluid">
-							<div class="span2">
-								<input id="tempSlider" type="range" min="-10" max="40" value="20" step="1" readonly="readonly"/><br>
-								<span id="currentTempValue"></span>
-							</div>
-						</div>
+						<div class="span9" id="tempContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
 					</div>
-				</div>		
+				</div>
 			</div>
+			
 		</div>
 		
 	</div>
