--- a/Seapal_play/app/views/_include/logbook/logbook_weatherinfo.scala.html
+++ b/Seapal_play/app/views/_include/logbook/logbook_weatherinfo.scala.html
@@ -1,49 +1,37 @@
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/modules/data.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
-
-<script src="@routes.Assets.at("javascripts/app/logbook/logbook_weather_chart.js")" type="text/javascript"></script>
-
 <div class="container-fluid" id="weather_info_table" style="display: none">
 	<h2>Wetter Informationen</h2>
 	<br />
 
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
-
-<div id="chartContainer">
-
-	<div class="row-fluid" id="chartContainer">
-
+	<div class="row-fluid" id="chartContainer" style="width: 1160px">
+	
 		<div class="row-fluid">
 			<div class="span3">
 				<h4>Windrichtung/</h4><h4>Windgeschwindigkeit</h4>
 				<div id="windContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
 			</div>
-	
+		
 			<div class="span3">
 				<h4>Wellenrichtung/</h4><h4>Wellenh&ouml;he</h4>
 				<div id="waveContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
 			</div>
-		
+			
 			<div class="span2" id="test">
 				<h4>Luftdruck</h4>
-				<div id="pressureContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
+				<div id="pressureContainer" style="width: 200px; height: 200px; margin: 0 auto; margin-top: 50px"></div>
 			</div>	
-			
+				
 			<div class="span2">
 				<h4>Bew&ouml;lkung</h4>
-				<div id="cloudContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
+				<div id="cloudContainer" style="width: 200px; height: 200px; margin: 0 auto; margin-top: 50px"></div>
 			</div>
-			
+				
 			<div class="span2">
 				<h4>Temperatur</h4>
-				<div id="tempContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
+				<div id="tempContainer" style="width: 200px; height: 200px; margin: 0 auto; margin-top: 50px"></div>
 			</div>
 			
 		</div>
-		
+			
 	</div>
+</div>
 
-</div>
-</div>
