--- a/Seapal_play/app/views/trip.scala.html
+++ b/Seapal_play/app/views/trip.scala.html
@@ -8,6 +8,20 @@
     	<!-- Header -->
         @header
         
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/map.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/contextMenu.css")">
+
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
+		<script src="@routes.Assets.at("javascripts/app/route/route_menu.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/map/labels.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/map/validation.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/map/TxtOverlay.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/map/contextMenu.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/map/map_routes.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/route/route_map.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/app/route/print_route.js")" type="text/javascript" ></script>
+        
     </head>
     <body onload="initialize();">
     
