--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_tripinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
+@(header: Html)(header_app_trip: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_tripinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
 
 <!DOCTYPE html>
 
@@ -7,24 +7,7 @@
 
 		<!-- Header -->
         @header
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
-		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
-		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/simple_map.css")">
-        
-        <script src="http://code.highcharts.com/highcharts.js"></script>
-		<script src="http://code.highcharts.com/highcharts-more.js"></script>
-		<script src="http://code.highcharts.com/modules/data.js"></script>
-		<script src="http://code.highcharts.com/modules/exporting.js"></script>
-
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
-		<script src="@routes.Assets.at("javascripts/app/logbook/logbook_simple_map_init.js")" type="text/javascript"></script>
-		<script src="@routes.Assets.at("javascripts/app/logbook/logbook_trip_menu.js")" type="text/javascript"></script>
-		<script src="@routes.Assets.at("javascripts/app/logbook/logbook_boatinfo_menu.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app/logbook/logbook_weather_data.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app/logbook/logbook_print_trip.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app/logbook/logbook_boat_data.js")" type="text/javascript"></script>
-		<script src="@routes.Assets.at("javascripts/app/logbook/logbook_weather_chart.js")" type="text/javascript"></script>
+      	@header_app_trip
 
 </head>
 <body onload="initialize();">
