--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app: Html)(navigation: Html)(navigation_app: Html)(map_content: Html)(weather_chart: Html)
+@(header: Html)(header_app: Html)(header_app_map: Html)(navigation: Html)(navigation_app: Html)(map_content: Html)(weather_chart: Html)
 
 <!DOCTYPE html>
 
@@ -10,15 +10,7 @@
         
         <!-- Header App -->
         @header_app
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
-        
-        <script src="http://code.highcharts.com/highcharts.js"></script>
-		<script src="http://code.highcharts.com/highcharts-more.js"></script>
-		<script src="http://code.highcharts.com/modules/data.js"></script>
-		<script src="http://code.highcharts.com/modules/exporting.js"></script>
-        
-        <script src="@routes.Assets.at("javascripts/app/map/map_weather_data.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app/map/map_weather_chart.js")" type="text/javascript"></script>
+        @header_app_map
         
     </head>
     <body onload="initialize();">
